@@ -57,6 +57,7 @@ extern "C" {
 #define DIFX_MESSAGE_DISC_SERIAL_LENGTH	31
 #define DIFX_MESSAGE_DISC_MODEL_LENGTH	31
 #define DIFX_MESSAGE_MAX_SMART_IDS	32
+#define DIFX_MESSAGE_MAX_INET_ADDRESS_LENGTH	64
 
 /**** LOW LEVEL MULTICAST FUNCTIONS ****/
 
@@ -447,7 +448,7 @@ typedef struct
 typedef struct
 {
 	enum DifxMessageType type;
-	char from[DIFX_MESSAGE_PARAM_LENGTH];
+	char from[DIFX_MESSAGE_MAX_INET_ADDRESS_LENGTH];
 	char to[DIFX_MESSAGE_MAX_TARGETS][DIFX_MESSAGE_PARAM_LENGTH];
 	int nTo;
 	char identifier[DIFX_MESSAGE_IDENTIFIER_LENGTH];
